# devops-project

./: .gitignore  BUILD  Dockerfile  README.md  docker-compose.yaml  pants.toml  temp.md  values.yaml
.github/workflows/: pants_pipeline.yaml  publish_containers.yaml
admin/: .dockerignore  BUILD  Dockerfile  pyproject.toml
admin/admin/: settings.py  urls.py
infrastructure/kubernetes/admin/: 0-namespace.yaml  1-deployment.yaml  2-service.yaml  3-ingress.yaml  4-network-pol.yaml
infrastructure/kubernetes/argocd/: argocd.cm.yaml  ingress.yaml
infrastructure/kubernetes/grafana/: ingress.yaml
infrastructure/kubernetes/ingress/: 0-namespace.yaml  1-application.yaml  Chart.yaml  deployment.yaml  ingress-nginx.yaml  values.yaml
infrastructure/kubernetes/mongo/: 03-mongo-claim0-persistentvolumeclaim.yaml  03-mongo-claim1-persistentvolumeclaim.yaml  03-mongo-deployment.yaml  03-mongo-service.yaml
infrastructure/kubernetes/payment/: 0-namespace.yaml  1-deployment.yaml  2-service.yaml  3-ingress.yaml  4-ingclass.yaml  4-network-pol.yaml  deployment.yaml
infrastructure/kubernetes/product/: 0-namespace.yaml  1-deployment.yaml  2-service.yaml  3-ingress.yaml  4-network-pol.yaml
infrastructure/terraform/1.aks_stack/: main.tf
payment/: BUILD  Dockerfile  pyproject.toml
payment/payment/: settings.py  urls.py
payment/payment_app/: models.py  serializers.py  views.py
product/: BUILD  Dockerfile  pyproject.toml
product/product/: asgi.py  settings.py  urls.py  wsgi.py
product/product_app/: views.py
product/shared_app/: .gitignore  LICENCE  setup.cfg
shared_app/: BUILD  LICENCE  pyproject.toml  readme.md  setup.cfg
shared_app/shared/: models.py
sidecarproxy/: Dockerfile  index.js  package-lock.json  package.json
(+15 files in other folders)
