[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["Mekni_Wassime <mekni.wassime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
shared-app = "^0.1"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
