[tool.poetry]
name = "payment"
version = "0.1.0"
description = ""
authors = ["Mekni_Wassime <mekni.wassime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
requests = "^2.28.2"
coreapi = "^2.3.3"
django-prometheus = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
