[tool.poetry]
name = "product"
version = "0.1.0"
description = ""
authors = ["Mekni_Wassime <mekni.wassime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
